# ex_2

./: .gitignore  Cargo.toml  README.md
src/: game.rs  lib.rs  main.rs  menus.rs  utilities.rs
src/game/: default_options.rs  game_logic.rs  main_game.rs  options.rs
src/game/game_logic/: questions.rs
src/menus/: Settings  menu_logic.rs  menus.rs  options.rs  options_menu.rs  scores.rs  start.rs  start_layout.rs  start_menu.rs
src/utilities/: cls_scr.rs  default_game_settings.rs  errors.rs  game_settings.rs  inputs.rs  misc.rs  questions.rs  score_board.rs  settings.rs  start_menu.rs
src/utilities/file/: open_file.rs
src/utilities/misc/: cls_scr.rs  errors.rs  inputs.rs
src/utilities/score_board/: board.rs  default_layout.rs  defaults.rs  file.rs  score_defaults.rs  score_edit.rs  score_file.rs  score_layout.rs  score_read.rs  score_sort.rs
src/utilities/settings/: defaults.rs  edit.rs  file.rs  in_game.rs  in_game_settings.rs  read.rs  settings_defaults.rs  settings_edit.rs  settings_file.rs  settings_layout.rs  settings_read.rs
src/utilities/settings/file/: default_layout.rs  edit.rs  file.rs  open_file.rs  read.rs
src/utilities/start_menu/: start_layout.rs
